crates/strider-analyze/tests/snapshots/ppc32le__arithmetic__bit_or.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "8" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v9" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v9" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "11" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "13" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "16" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
